# scaffold

./: .gitignore  CLAUDE.md  LICENSE  README.md  SCAFFOLD.md  pyproject.toml
scaffold/: __init__.py  defaults.py
scaffold/auth/: __init__.py  codegen.py
scaffold/auth/sidecar/: Dockerfile  app.py  email_send.py  jwt_utils.py  proxy.py
scaffold/cli/: _dev.py  _down.py  _env.py  _init.py  _logs.py  _status.py  _up.py  main.py
scaffold/config/: global_config.py  tokens.py
scaffold/manifest/: loader.py  resolve.py  schema.py
scaffold/planner/: agent.py
scaffold/providers/: base.py  neon.py  railway.py  supabase.py  vercel.py
scaffold/state/: store.py
